# m-explore-ros2

./: .gitignore  BUILD_AND_TEST.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  M2_ENHANCEMENTS_FOR_100.md  M2_REPORT_FINAL_SUMMARY.md  MILESTONE2_COMPLETE.md  MILESTONE2_REPORT_COMPLETE.md  QUICKSTART.md  README.md  analyze_results.py
.devcontainer/: Dockerfile  devcontainer.macos.json  docker-compose.macos.yml
data/: baseline_analysis.json  explain_drop.txt  metrics.json  metrics_auto.json  metrics_hungarian_20251117_215458.json  metrics_single_20251117_150912.json
explore/: CMakeLists.txt  package.xml
explore/config/: params.yaml
explore/src/: explore.cpp  frontier_search.cpp
explore_coordinator/: package.xml  setup.py
explore_coordinator/config/: coordinator_params.yaml
explore_coordinator/explore_coordinator/: coordinator_node.py
explore_coordinator/launch/: coordinated_exploration.launch.py  coordinator.launch.py
explore_msgs/: CMakeLists.txt  package.xml
explore_msgs/msg/: Frontier.msg  FrontierArray.msg
latex_report/: EXPANSION_SUMMARY.md  README.md  final_report.tex  milestone1_report.aux  milestone1_report.fdb_latexmk  milestone1_report.fls  milestone1_report.out  milestone1_report.tex  milestone2_report.aux  milestone2_report.fdb_latexmk  milestone2_report.fls  milestone2_report.out  milestone2_report.tex
simulation/: warehouse_final.py  warehouse_results.json
util/: analyze_baseline.py  analyze_multi.py  collect_metrics.py  compute_metrics.py  generate_figures.py  multi_metrics.py  plot_metrics.py  start_exploration.sh
(+3 files in other folders)
